# ConsoleChess

./: CMakeLists.txt  README.md
src/: CChessBoard.cpp  CChessBoard.h  CFigure.h  CGame.cpp  CGame.h  CPlayer.cpp  CPlayer.h  PIECES.h  main.cpp
src/pieces/: CBishop.cpp  CBishop.h  CKing.cpp  CKing.h  CKnight.cpp  CKnight.h  CPawn.cpp  CPawn.h  CPiece.cpp  CPiece.h  CQueen.cpp  CQueen.h  CRook.cpp  CRook.h
src/players/: CPlayer.cpp  CPlayer.h  CPlayerHuman.cpp  CPlayerHuman.h
